yaml/openshift-demo-deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: openshift-demo-customers
  name: openshift-demo-customers
  namespace: custdemo
spec:
  replicas: 1
  selector:
    app: openshift-demo-customers
    deploymentconfig: openshift-demo-customers
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: openshift-demo-customers
        deploymentconfig: openshift-demo-customers
    spec:
      containers:
        - env:
            - name: CUSTDEMO_CONFIG
              valueFrom:
                configMapKeyRef:
                  key: custapi.config
                  name: custdemo-cfgmap-custapi
          image: openshift-demo-customers
          imagePullPolicy: Always
          name: openshift-demo-customers
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - openshift-demo-customers
        from:
          kind: ImageStreamTag
          name: 'openshift-demo-customers:latest'
          namespace: custdemo
      type: ImageChange
