yaml/openshift-demo-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: custdemo-ext-cache
  namespace: custdemo
subsets:
  - addresses:
      - ip: 192.168.0.200
    ports:
      - name: cache
        port: 6379
