yaml/openshift-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custdemo-ext-cache
  namespace: custdemo
spec:
  ports:
    - 
      name: cache
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 0
selector: {}
