yaml/openshift-demo-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: custdemo
  name: custdemo.apis
  namespace: custdemo
spec:
  to:
    kind: Service
    name: openshift-demo-customers
    weight: 100
  wildcardPolicy: None
